<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/create"
        android:title="@string/homepage_menu_item_create"
        android:icon="@drawable/ic_create"
        android:contentDescription="@string/content_description_create"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:title="@string/homepage_menu_item_search"
        android:icon="@drawable/ic_search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/bin"
        android:title="@string/homepage_menu_item_bin"
        android:icon="@drawable/ic_bin"
        android:contentDescription="@string/content_description_bin"
        app:showAsAction="always" />


</menu>